@@ -30,52 +30,86 @@
 #include <QFormLayout>
 #include <QSpinBox>
 
-InputDialog::InputDialog(const QString &caption, const QString &label, const QString &value, QLineEdit::EchoMode echo, QWidget *parent)
+enum InputType {
+    Int,
+    Text,
+    Combo
+};
+
+InputDialog::InputDialog(const QString &caption, const QString &label, const QString &value, const QStringList &options, QLineEdit::EchoMode echo, QWidget *parent)
     : Dialog(parent)
-    , spin(0)
+    , spin(nullptr)
+    , edit(nullptr)
+    , combo(nullptr)
 {
-    init(false, caption, label);
-    edit->setText(value);
-    edit->setEchoMode(echo);
+    init(options.isEmpty() ? Text : Combo, caption, label);
+    if (options.isEmpty()) {
+        edit->setText(value);
+        edit->setEchoMode(echo);
+        connect(edit, SIGNAL(textChanged(QString)), this, SLOT(enableOkButton()));
+    } else {
+        QStringList items = options;
+        if (!value.isEmpty() && -1==items.indexOf(value)) {
+            items.append(value);
+        }
+        qSort(items);
+        combo->addItems(items);
+        combo->setCurrentText(value.isEmpty() ? QString() : value);
+        connect(combo, SIGNAL(editTextChanged(QString)), this, SLOT(enableOkButton()));
+    }
     enableOkButton();
-    connect(edit, SIGNAL(textChanged(QString)), this, SLOT(enableOkButton()));
 }
 
 InputDialog::InputDialog(const QString &caption, const QString &label, int value, int minValue, int maxValue, int step, QWidget *parent)
     : Dialog(parent)
-    , edit(0)
+    , spin(nullptr)
+    , edit(nullptr)
+    , combo(nullptr)
 {
-    init(true, caption, label);
+    init(Int, caption, label);
     spin->setRange(minValue, maxValue);
     spin->setValue(value);
     spin->setSingleStep(step);
 }
 
-void InputDialog::addExtraWidget(const QString &label, QWidget *w)
+void InputDialog::addExtraWidget(QWidget *w)
 {
     w->setParent(mainWidget());
-    qobject_cast<QFormLayout *>(mainWidget()->layout())->addRow(new QLabel(label, mainWidget()), w);
+    QVBoxLayout *layout=qobject_cast<QVBoxLayout *>(mainWidget()->layout());
+    layout->insertWidget(layout->count()-1, w);
 }
 
-void InputDialog::init(bool intInput, const QString &caption, const QString &label)
+void InputDialog::init(int type, const QString &caption, const QString &labelText)
 {
     extra = 0;
     setButtons(Ok|Cancel);
     QWidget *wid=new QWidget(this);
-    QFormLayout *layout=new QFormLayout(wid);
+    QVBoxLayout *layout=new QVBoxLayout(wid);
+    layout->addWidget(new QLabel(labelText, wid));
 
-    if (intInput) {
+    switch (type) {
+    case Int:
         spin=new QSpinBox(wid);
-        spin->setSizePolicy(QSizePolicy::MinimumExpanding, QSizePolicy::Preferred);
+        spin->setSizePolicy(QSizePolicy::MinimumExpanding, QSizePolicy::Fixed);
         setMinimumWidth(Utils::scaleForDpi(300));
-    } else {
+        layout->addWidget(spin);
+        break;
+    case Text:
         edit=new LineEdit(wid);
         edit->setSizePolicy(QSizePolicy::MinimumExpanding, QSizePolicy::Preferred);
-        setMinimumWidth(Utils::scaleForDpi(350));
+        edit->setMinimumWidth(Utils::scaleForDpi(350));
+        layout->addWidget(edit);
+        break;
+    case Combo:
+        combo=new ComboBox(wid);
+        combo->setSizePolicy(QSizePolicy::MinimumExpanding, QSizePolicy::Preferred);
+        combo->setEditable(true);
+        combo->setMinimumWidth(Utils::scaleForDpi(350));
+        layout->addWidget(combo);
+        break;
     }
-    layout->addRow(new QLabel(label, wid), intInput ? static_cast<QWidget *>(spin) : static_cast<QWidget *>(edit));
+    layout->addItem(new QSpacerItem(0, 0, QSizePolicy::MinimumExpanding, QSizePolicy::MinimumExpanding));
     layout->setMargin(0);
-
     setCaption(caption);
     setMainWidget(wid);
     setButtons(Ok|Cancel);
@@ -83,7 +117,7 @@ void InputDialog::init(bool intInput, const QString &caption, const QString &lab
 
 void InputDialog::enableOkButton()
 {
-    enableButton(Ok, 0==edit || !edit->text().trimmed().isEmpty());
+    enableButton(Ok, (nullptr==edit || !edit->text().trimmed().isEmpty()) && (nullptr==combo || !combo->currentText().trimmed().isEmpty()));
 }
 
 int InputDialog::getInteger(const QString &caption, const QString &label, int value, int minValue, int maxValue, int step, int base, bool *ok, QWidget *parent)
@@ -103,14 +137,14 @@ int InputDialog::getInteger(const QString &caption, const QString &label, int va
     }
 }
 
-QString InputDialog::getText(const QString &caption, const QString &label, QLineEdit::EchoMode echoMode, const QString &value, bool *ok, QWidget *parent)
+QString InputDialog::getText(const QString &caption, const QString &label, QLineEdit::EchoMode echoMode, const QString &value, const QStringList &options, bool *ok, QWidget *parent)
 {
-    InputDialog dlg(caption, label, value, echoMode, parent);
+    InputDialog dlg(caption, label, value, options, echoMode, parent);
     if (QDialog::Accepted==dlg.exec()) {
         if (ok) {
             *ok=true;
         }
-        return dlg.edit->text();
+        return dlg.lineEdit()->text();
     } else {
         if (ok) {
             *ok=false;
